--- a/style.css
+++ b/style.css
@@ -57,19 +57,47 @@ a.creditlink{
     height: 30%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding-top: 8rem;
-    padding-bottom: 4rem;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.top-section{
+    padding-top: 4rem;
+    padding-bottom: 1rem;
     padding-left: 2rem;
     padding-right: 10rem;
-    font-size: 28px;
-    font-weight: 600;
+    gap: 2rem;
+}
+
+.bot-section{
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    padding-left: 2rem;
+    padding-right: 10rem;
+    gap: 1rem;
 }
 
 .mid-section{
     background-color: white;
     height: 40%;
     box-shadow: 0px 5px 5px rgb(218, 218, 218);
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    justify-content: space-between;
+}
+
+button.create-acct{
+    width: 10rem;
+    height: 3rem;
+    background-color: #2596be;
+    border-radius: 5px;
+    border: 0px;
+    color: white;
+}
+
+button.create-acct:hover{
+    scale: 1.1;
 }
 
 .text-container-01{
