--- a/style.css
+++ b/style.css
@@ -48,13 +48,13 @@ a.creditlink{
 .form-main{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: 60%;
-    background-color: rgb(238, 238, 238);
+    background-color: rgb(225, 225, 225);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .top-section, .bot-section{
-    height: 30%;
     display: flex;
     flex-direction: column;
     font-size: 22px;
@@ -67,6 +67,7 @@ a.creditlink{
     padding-left: 2rem;
     padding-right: 10rem;
     gap: 2rem;
+    justify-content: flex-end;
 }
 
 .bot-section{
@@ -74,17 +75,16 @@ a.creditlink{
     padding-bottom: 2rem;
     padding-left: 2rem;
     padding-right: 10rem;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .mid-section{
     background-color: white;
-    height: 40%;
-    box-shadow: 0px 5px 5px rgb(218, 218, 218);
+    box-shadow: 0px 5px 5px rgb(204, 204, 204);
     display: flex;
     flex-direction: column;
     padding: 2rem;
-    justify-content: space-between;
+    gap: 2rem;
 }
 
 button.create-acct{
@@ -97,13 +97,50 @@ button.create-acct{
 }
 
 button.create-acct:hover{
-    scale: 1.1;
+    scale: 0.95;
 }
 
-.text-container-01{
-    
+.title{
+    font-size: 22px;
+    font-weight: 600;
 }
 
-.text-container-02{
+.form-container{
+    gap: 3rem;
+    display: flex;
+}
 
+label{
+    font-size: 14px;
+    font-weight: 400;
+
+}
+
+input{
+    font-size: 18px;
+    border: 1px solid rgb(215, 215, 215);
+    border-radius: 3px;
+    padding: 5px;
+}
+
+:focus-visible{
+    outline: 0;
+}
+
+input:focus-visible{
+    border: 1px solid rgb(81, 113, 255);
+    box-shadow: 0px 5px 5px rgb(211, 211, 211);
+}
+
+.form-input{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.input-label-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: .25rem;
 }
