--- a/style.css
+++ b/style.css
@@ -108,9 +108,21 @@ a.creditlink{
     font-weight: 600;
 }
 
-.form-container{
+.form-col-1, .form-col-2{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.form-container-content{
     gap: 3rem;
     display: flex;
+}
+
+.form-container-all{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 
 label{
@@ -137,8 +149,7 @@ input:focus-visible{
 
 .form-input{
     display: flex;
-    flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .input-label-container{
